# sudoku-solver

./: .gitignore  README.md  blogpost.md  pyproject.toml  run.py
.github/workflows/: publish_to_pypi.yml  scrape.yml  unit_test.yml
scripts/: benchmark_2k.py  benchmark_speed.py  collect_training_data.py  find_possible_wrong_strategy.py  parse_svg_url.py  sample_brute_force_solver.py
sudoku_solver/: __init__.py  puzzle.py
sudoku_solver/strategies/: __init__.py  candidate_lines.py  double_pairs.py  hidden_subset.py  naked_subset.py  single_candidates.py  single_position.py
sudoku_solver/strategies/advanced/: hidden_pairs.py  hidden_quads.py  hidden_triples.py  naked_pairs.py  naked_quads.py  naked_triples.py  naked_triplets.py
sudoku_solver/strategies/easy/: single_candidates.py  single_position.py
sudoku_solver/strategies/master/: brute_force.py  swordfish.py  x_wings.py
sudoku_solver/strategies/medium/: candidate_lines.py  double_pairs.py  multiple_lines.py
sudoku_solver_tim/: __init__.py  puzzle.py
sudoku_solver_tim/strategies/: __init__.py
sudoku_solver_tim/strategies/advanced/: hidden_pairs.py  hidden_quads.py  hidden_triples.py  naked_pairs.py  naked_quads.py  naked_triples.py
sudoku_solver_tim/strategies/easy/: single_candidates.py  single_position.py
sudoku_solver_tim/strategies/master/: brute_force.py  swordfish.py  x_wings.py
sudoku_solver_tim/strategies/medium/: candidate_lines.py  double_pairs.py  multiple_lines.py
tests/: test_brute_force.py  test_candidate_lines.py  test_double_pairs.py  test_hidden_pairs.py  test_hidden_quads.py  test_hidden_subset.py  test_hidden_triples.py  test_multiple_lines.py  test_naked_pairs.py  test_naked_quads.py  test_naked_subset.py  test_naked_triples.py  test_naked_triplets.py  test_puzzle_class.py  test_sudoku_solver.py  test_sudokuofthedaypuzzles.py  test_swordfish.py  test_x_wings.py
tests/fixtures/: sudoku_data-2024-06-07-to-2024-06-14.json  sudoku_data-2025-03-03-to-2025-03-12.json  sudoku_data-2025-03-13.json  sudoku_data-2025-03-14.json  sudoku_data-2025-03-15.json  sudoku_data-2025-03-16.json  sudoku_data-2025-03-17.json  sudoku_data-2025-03-18.json  sudoku_data-2025-03-19.json
