[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Vink", email = "vinktim@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "rich>=12.4.4",
]


[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "numpy>=1.23.0",
    "pytest>=5.2",
    "requests>=2.32.3",
]
