[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-solver-tim"
version = "0.1.1"
description = "Sudoku solver that will use successively more advanced techniques to solve the puzzle."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Tim Vink", email = "vinktim@gmail.com"},
]
requires-python = ">=3.10"
license = { text = "GPLv3" }

classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
    "rich>=12.4.4",
]


[project.urls]
"Homepage" = "https://github.com/timvink/sudoku-solver"
"Bug Tracker" = "https://github.com/timvink/sudoku-solver/issues"


[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "marimo>=0.11.22",
    "numpy>=1.23.0",
    "pytest>=5.2",
    "requests>=2.32.3",
]
